# PowerfulPlugins

./: README.md  index.txt
mtdist/: astrobox_ng_plugin_template_rust.wasm
mtsrc/: Cargo.toml
mtsrc/src/: lib.rs  resources.rs  ui.rs
mtsrc/src/resources/: auth.rs  provider.rs  upload.rs
mtsrc/wit/: main.wit
qwdist/: astrobox_ng_plugin_qingwear_community.wasm  manifest.json  轻腕社区源.abp
qwsrc/: Cargo.toml
qwsrc/src/: lib.rs  logger.rs  resources.rs
qwsrc/src/resources/: gateway.rs  provider.rs
