[package]
name = "astrobox-ng-plugin-template-rust"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
wit-bindgen = { version = "0.47.0", features = ["async", "async-spawn"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
waki = { version = "0.5.1", features = ["multipart"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
md5 = "0.7"
base64 = "0.22"
rand_chacha = "0.3"
rand_core = "0.6"
rsa = "0.9"
