[package]
name = "astrobox-ng-plugin-qingwear-community"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
wit-bindgen = { version = "0.47.0", features = ["async", "async-spawn"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "=0.2.3"
waki = { version = "0.5.1", features = ["json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.22"
md5 = "0.7"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
rand_chacha = "0.3"
rand_core = "0.6"
